--- a/DistributedPetProject/Views/Account/Login.cshtml
+++ b/DistributedPetProject/Views/Account/Login.cshtml
@@ -10,7 +10,7 @@
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
-               // @Html.AntiForgeryToken()
+                @Html.AntiForgeryToken()
                 <h4>Please Log in to View the DashBoard</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
