--- a/DistributedPetProject/Views/Home/Dashboard.cshtml
+++ b/DistributedPetProject/Views/Home/Dashboard.cshtml
@@ -3,13 +3,15 @@
     <h2>
         PetMyPet Dashboard
     </h2>
-    <table class="table">
-        <thead class="thead-inverse">
+    <table class="table  table-striped">
+        <thead class="thead-inverse" style="background-color:#708090;">
             <tr>
                 <th>#</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Username</th>
+                <th>Owner's First Name</th>
+                <th>Owner's Last Name</th>
+                <th>Pet Type</th>
+                <th>DateTime</th>
+                <th>Rate</th>                
             </tr>
         </thead>
         <tbody>
@@ -17,52 +19,28 @@
                 <th scope="row">1</th>
                 <td>Mark</td>
                 <td>Otto</td>
-                <td>@mdo</td>
+                <td>Dog</td>
+                <td>12/21/2017</td>
+                <td>15</td>
             </tr>
             <tr>
                 <th scope="row">2</th>
                 <td>Jacob</td>
                 <td>Thornton</td>
-                <td>@fat</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-            </tr>
-        </tbody>
-    </table>
+                <td>Dog</td>
+                <td>06/21/2017</td>
+                <td>20</td>
 
-    <table class="table">
-        <thead class="thead-default">
-            <tr>
-                <th>#</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Username</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
             </tr>
             <tr>
                 <th scope="row">3</th>
                 <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
+                <td>Scope</td>
+                <td>Cat</td>
+                <td>07/1/2017</td>
+                <td>17</td>
             </tr>
         </tbody>
-    </table>
+    </table>    
 </body>
 </html>
